cmake_minimum_required(VERSION 3.23)
project(feibonaqi C)

set(CMAKE_C_STANDARD 99)

add_executable( CMakeLists.txt leetcode2396.c leetcode2574.c finalexam4.c)

add_executable(leetcode2396 leetcode2396.c)
add_executable(leetcode2574 leetcode2574.c)
add_executable(leetcode1769 leetcode1769.c)
add_executable(leetcode1603 leetcode1603.c)
add_executable(leetcode1 leetcode1.c)
add_executable(leetcode807 leetcode807.c)
add_executable(leetcode2011 leetcode2011.c)
add_executable(leetcode535 leetcode535.c)
add_executable(leetcode1920 leetcode1920.c)
add_executable(leetcode2545 leetcode2545.c)
add_executable(finalexam4 finalexam4.c finalexam4.c)